--- a/src/componants/Home/Gsap/Gsap.module.css
+++ b/src/componants/Home/Gsap/Gsap.module.css
@@ -11,7 +11,7 @@
     position: absolute;
     width: 250px; 
     height: 197.5%; 
-    background-color: #EEEEEE;
+    background-color: #F2F2F2;
     left: 70%; 
     transform: translateX(-50%);
 }
